[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/debug_options.gd" type="Script" id=1]

[node name="DebugOptions" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -68.0
margin_top = 84.0
margin_right = 75.0
margin_bottom = 108.0
text = "Codename: Egg Tosser"
align = 1
valign = 1

[node name="Title2" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 136.0
margin_top = 232.0
margin_right = 321.0
margin_bottom = 365.0
text = "NOTE: Options won't
be saved when the game
is closed, but will persist
if you restart after game over

Press ESC to end the game
and return to this screen
at any time"
align = 1
valign = 1

[node name="EggOptions" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -72.0
margin_top = 200.0
margin_right = 79.0
margin_bottom = 224.0
text = "EGG PHYSICS OPTIONS"
align = 1
valign = 1

[node name="GravityEdit" type="LineEdit" parent="."]
margin_left = 416.0
margin_top = 232.0
margin_right = 474.0
margin_bottom = 256.0

[node name="VelDampEdit" type="LineEdit" parent="."]
margin_left = 416.0
margin_top = 264.0
margin_right = 474.0
margin_bottom = 288.0

[node name="RotVelDampEdit" type="LineEdit" parent="."]
margin_left = 416.0
margin_top = 296.0
margin_right = 474.0
margin_bottom = 320.0

[node name="EggSpinCheckbox" type="CheckBox" parent="."]
margin_left = 416.0
margin_top = 328.0
margin_right = 440.0
margin_bottom = 352.0

[node name="Label" type="Label" parent="."]
margin_left = 320.0
margin_top = 232.0
margin_right = 416.0
margin_bottom = 256.0
text = "Gravity (0-128)"
valign = 1

[node name="Label2" type="Label" parent="."]
margin_left = 240.0
margin_top = 264.0
margin_right = 415.0
margin_bottom = 288.0
text = "Velocity dampening (0-100)"
valign = 1

[node name="Label3" type="Label" parent="."]
margin_left = 168.0
margin_top = 296.0
margin_right = 410.0
margin_bottom = 320.0
text = "Rotaitonal velocity dampening (0-100)"
valign = 1

[node name="Label6" type="Label" parent="."]
margin_left = 216.0
margin_top = 328.0
margin_right = 410.0
margin_bottom = 352.0
text = "Apply random spin when laid"
valign = 1

[node name="EggOptions2" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -64.0
margin_top = 384.0
margin_right = 79.0
margin_bottom = 408.0
text = "GAMEPLAY OPTIONS"
align = 1
valign = 1

[node name="Label4" type="Label" parent="."]
margin_left = 248.0
margin_top = 408.0
margin_right = 412.0
margin_bottom = 432.0
text = "Egg lay interval (>=1 secs)"
valign = 1

[node name="Label5" type="Label" parent="."]
margin_left = 344.0
margin_top = 440.0
margin_right = 413.0
margin_bottom = 464.0
text = "Lives (>=1)"
valign = 1

[node name="Label7" type="Label" parent="."]
margin_left = 240.0
margin_top = 472.0
margin_right = 410.0
margin_bottom = 496.0
text = "Bird speed (pixels per sec)"
valign = 1

[node name="EggIntervalEdit" type="LineEdit" parent="."]
margin_left = 416.0
margin_top = 408.0
margin_right = 474.0
margin_bottom = 432.0

[node name="LivesEdit" type="LineEdit" parent="."]
margin_left = 416.0
margin_top = 440.0
margin_right = 474.0
margin_bottom = 464.0

[node name="BirdSpeedEdit" type="LineEdit" parent="."]
margin_left = 416.0
margin_top = 472.0
margin_right = 474.0
margin_bottom = 496.0

[node name="StartGameButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -48.0
margin_right = 40.0
margin_bottom = -28.0
text = "Start game"

[connection signal="pressed" from="StartGameButton" to="." method="_on_StartGameButton_pressed"]
